day4 copy
Last login: Wed Feb  8 17:18:40 on ttys001
Ms-MacBook-Pro:~ abhishekarora$ cd Desktop/
Ms-MacBook-Pro:Desktop abhishekarora$ cd cognizance/
Ms-MacBook-Pro:cognizance abhishekarora$ mkdir day4
Ms-MacBook-Pro:cognizance abhishekarora$ cd day
-bash: cd: day: No such file or directory
Ms-MacBook-Pro:cognizance abhishekarora$ cd day4
Ms-MacBook-Pro:day4 abhishekarora$ python3 kmeans.py 
Ms-MacBook-Pro:day4 abhishekarora$ python3 kmeans.py 
Ms-MacBook-Pro:day4 abhishekarora$ python3
Python 3.6.0 (default, Dec 24 2016, 00:01:50) 
[GCC 4.2.1 Compatible Apple LLVM 8.0.0 (clang-800.0.42.1)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> kmeans.py
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'kmeans' is not defined
>>> exit()
Ms-MacBook-Pro:day4 abhishekarora$ python3 kmeans.py 
Ms-MacBook-Pro:day4 abhishekarora$ python3 kmeans.py 
Traceback (most recent call last):
  File "kmeans.py", line 9, in <module>
    clf.lables_
AttributeError: 'KMeans' object has no attribute 'lables_'
Ms-MacBook-Pro:day4 abhishekarora$ python3 kmeans.py 
Ms-MacBook-Pro:day4 abhishekarora$ python3 
Python 3.6.0 (default, Dec 24 2016, 00:01:50) 
[GCC 4.2.1 Compatible Apple LLVM 8.0.0 (clang-800.0.42.1)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> import matplotlib.plyplot as plt
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named 'matplotlib.plyplot'
>>> import matplotlib.pyplot as plt
>>> l = clf.labels_
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'clf' is not defined
>>> import numpy as p
>>> from sklearn.cluster import KMeans
>>> X= np.array([[1,2],[1.5,1.8],[8,8],[1,0.6],[9,11]])
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'np' is not defined
>>> 
>>> clf= KMeans(n_clusters=2)
>>> clf.fit(X)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'X' is not defined
>>> clf.cluster_centers_
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'KMeans' object has no attribute 'cluster_centers_'
>>> import numpy as np
>>> from sklearn.cluster import KMeans
>>> 
>>> X= np.array([[1,2],[1.5,1.8],[8,8],[1,0.6],[9,11]])
>>> 
>>> clf= KMeans(n_clusters=2)
>>> clf.fit(X)
KMeans(algorithm='auto', copy_x=True, init='k-means++', max_iter=300,
    n_clusters=2, n_init=10, n_jobs=1, precompute_distances='auto',
    random_state=None, tol=0.0001, verbose=0)
>>> clf.cluster_centers_
array([[ 8.5       ,  9.5       ],
       [ 1.16666667,  1.46666667]])
>>> l= clf.labels_
>>> l
array([1, 1, 0, 1, 0], dtype=int32)
>>> c= ['r','g']
>>> for i in l:
...     plt.scatter([X[i][0],X[i][1]] , color = c[l[i]])
... 
Traceback (most recent call last):
  File "<stdin>", line 2, in <module>
TypeError: scatter() missing 1 required positional argument: 'y'
>>>     plt.scatter([X[i][0],X[i][1]] , color = c[l[i]])
  File "<stdin>", line 1
    plt.scatter([X[i][0],X[i][1]] , color = c[l[i]])
    ^
IndentationError: unexpected indent
>>> for i in range(len(l)):
...     plt.scatter([X[i][0],X[i][1]] , color = c[l[i]])
... 
Traceback (most recent call last):
  File "<stdin>", line 2, in <module>
TypeError: scatter() missing 1 required positional argument: 'y'
>>> for i in range(len(l)):
...     plt.scatter([X[i][0]],[X[i][1]] , color = c[l[i]])
... 
<matplotlib.collections.PathCollection object at 0x10c465e10>
<matplotlib.collections.PathCollection object at 0x10c4739e8>
<matplotlib.collections.PathCollection object at 0x10c473f28>
<matplotlib.collections.PathCollection object at 0x10c473550>
<matplotlib.collections.PathCollection object at 0x10c487f28>
>>> plt.show()
>>> c
['r', 'g']
>>> style.use('ggplot')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'style' is not defined
>>> Ms-MacBook-Pro:day4 abhishekarora$ 
